--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<div  class="sociales">
-antonella suarez yulieth martinez
-</div>
+<body>
+ pagina inicial  
 
-    
+ proyecto integrado 
 </body>
 </html>
